Add Tornado Bar Plot of disease rank changes.